'+' complete, '*' WIP, '-' missing

OpenTK 0.3.10 -> 0.3.11

+ Bind
	+ Preliminary support for GLU and GLX.
	+ Improved generator speed. GLU generation down to 40 seconds (from 6 minutes).
	+ Enhanced overload trimming using Regexes. All endings should be handled correctly now.

+ OpenTK
	+ Platform
		+ Replaced System.Windows.Forms.Message with OpenTK.Platform.Windows.MSG. Corrects deadlocks under 32-bit windows.
		+ Added WindowMessage enum from Mono's bindings.
	+ GameWindow, GLControl and GLContext
		+ Improved shutdown sequence (finalizers only on classes that actually need them).
		+ Improved stability (exceptions no longer thrown in finalizers).
		+ Corrected deadlock under 32-bit Windows (see above).
		+ Added DummyGLControl and DummyGLContext, used in design mode. Improves design speed and resolves Visual Studio crashes.
		+ GameWindow Create event marked as obsolete. Use the Load event instead.
	+ Input
		+ Correctly implemented disposable pattern.
	+ OpenGL
		+ GL.ClearColor() now accepts a System.Drawing.Color
		+ All function endings are trimmed now (see Bind changelog).

+ Examples
	+ Improved ExampleLauncer behavior. Examples are now launched in the main ExampleLauncher thread, and the ExampleLauncher becomes invisible whenever and example is active.
	+ Improved example names inside the ExampleLauncher. Renamed some examples to better reflect their contents.
	+ Added two new tutorials: 'T01: Simple Window' and 'T02: Resizable Window'
	+ Updated the DrawCube() immediate mode functions to use System.Drawing.Colors
	+ Resolved issue where 'T10: GLSL Cube' example failed with an NRE when compiled with Mono 1.2.x
	+ Added 'W03: Extensions' example.


OpenTK 0.3.9 -> 0.3.10

+ Bind
	+ Added Generator for WGL.
	+ Corrected bug where trimmed overloads (like Color3) did not call the correct delegates internally (Color3ub called glColor3b)
	+ Improved configuration capabilities - can now change the function prefix/postfix, and more.